force-app/main/default/objects/Garagem__c/Garagem__c.object-meta.xml
<CustomObject>
    <label>Garagem</label>
    <nameField>
        <label>Nome de Garagem</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Garagens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>