force-app/main/default/objects/Garagem__c/fields/Andar__c.field-meta.xml
<CustomField>
    <fullName>Andar__c</fullName>
    <label>Andar</label>
    <length>25</length>
    <type>Text</type>
</CustomField>