force-app/main/default/objects/Garagem__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>