force-app/main/default/objects/Garagem__c/fields/CodigoLocalizacaoGaragem__c.field-meta.xml
<CustomField>
    <fullName>CodigoLocalizacaoGaragem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código localização da garagem</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Garagens</relationshipLabel>
    <relationshipName>Garagens</relationshipName>
    <type>Lookup</type>
</CustomField>