force-app/main/default/objects/Garagem__c/fields/CustoComercial__c.field-meta.xml
<CustomField>
    <fullName>CustoComercial__c</fullName>
    <label>C. Custo Comercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>