force-app/main/default/objects/Garagem__c/fields/CustoEngenharia__c.field-meta.xml
<CustomField>
    <fullName>CustoEngenharia__c</fullName>
    <label>C. Custo Engenharia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>