force-app/main/default/objects/Garagem__c/fields/FracaoFiscalTerreno__c.field-meta.xml
<CustomField>
    <fullName>FracaoFiscalTerreno__c</fullName>
    <label>Fração Fiscal Terreno</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>