force-app/main/default/objects/Garagem__c/fields/FracaoIdeal__c.field-meta.xml
<CustomField>
    <fullName>FracaoIdeal__c</fullName>
    <label>Fração Ideal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>