force-app/main/default/objects/Garagem__c/fields/FracaoSocietariaTerreno__c.field-meta.xml
<CustomField>
    <fullName>FracaoSocietariaTerreno__c</fullName>
    <label>Fração Societária Terreno</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>