force-app/main/default/objects/Garagem__c/fields/NumeroVagas__c.field-meta.xml
<CustomField>
    <fullName>NumeroVagas__c</fullName>
    <label>Número de Vagas</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>