force-app/main/default/objects/Garagem__c/fields/TipoEstrutura__c.field-meta.xml
<CustomField>
    <fullName>TipoEstrutura__c</fullName>
    <label>Tipo de Estrutura</label>
    <length>125</length>
    <type>Text</type>
</CustomField>